{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 112,
  "lineage": "24986ae7-7599-f9a8-3838-cd8cc6714cee",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "be_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/structhub-412620/regions/northamerica-northeast1/networkEndpointGroups/xtract-be-stage-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 70,
            "creation_timestamp": "2024-03-02T15:54:40.276-08:00",
            "enable_cdn": false,
            "fingerprint": "692XaZzbKBM=",
            "generated_id": 4582917707850973871,
            "id": "projects/structhub-412620/global/backendServices/xtract-be-stage-backend",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "locality_lb_policy": "RANDOM",
            "name": "xtract-be-stage-backend",
            "port_name": "http",
            "project": "structhub-412620",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/structhub-412620/global/backendServices/xtract-be-stage-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_cloud_run_v2_service.be_cloud_run",
            "google_compute_region_network_endpoint_group.be_backend",
            "google_project_service.compute_api",
            "google_project_service.run_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "fe_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/structhub-412620/regions/northamerica-northeast1/networkEndpointGroups/xtract-fe-stage-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 310,
            "creation_timestamp": "2024-03-02T15:54:40.708-08:00",
            "enable_cdn": false,
            "fingerprint": "sFzeYvOqii0=",
            "generated_id": 7028761665773372079,
            "id": "projects/structhub-412620/global/backendServices/xtract-fe-stage-backend",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "locality_lb_policy": "RANDOM",
            "name": "xtract-fe-stage-backend",
            "port_name": "http",
            "project": "structhub-412620",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/structhub-412620/global/backendServices/xtract-fe-stage-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_cloud_run_v2_service.fe_cloud_run",
            "google_compute_region_network_endpoint_group.fe_backend",
            "google_project_service.compute_api",
            "google_project_service.run_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "external_ip_be",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.36.219.82",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-03-02T14:33:31.878-08:00",
            "id": "projects/structhub-412620/global/addresses/xtract-be-ip-name",
            "name": "xtract-be-ip-name",
            "prefix_length": 0,
            "project": "structhub-412620",
            "self_link": "https://www.googleapis.com/compute/v1/projects/structhub-412620/global/addresses/xtract-be-ip-name"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "external_ip_fe",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.49.79.210",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-03-02T14:33:31.880-08:00",
            "id": "projects/structhub-412620/global/addresses/xtract-fe-ip-name",
            "name": "xtract-fe-ip-name",
            "prefix_length": 0,
            "project": "structhub-412620",
            "self_link": "https://www.googleapis.com/compute/v1/projects/structhub-412620/global/addresses/xtract-fe-ip-name"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "be_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/structhub-412620/global/forwardingRules/xtract-be-stage-https",
            "ip_address": "34.36.219.82",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "xtract-be-stage-https",
            "port_range": "443-443",
            "project": "structhub-412620",
            "self_link": "https://www.googleapis.com/compute/v1/projects/structhub-412620/global/forwardingRules/xtract-be-stage-https",
            "target": "https://www.googleapis.com/compute/v1/projects/structhub-412620/global/targetHttpsProxies/external-xtract-be-stage-https"
          },
          "dependencies": [
            "google_cloud_run_v2_service.be_cloud_run",
            "google_compute_backend_service.be_backend",
            "google_compute_global_address.external_ip_be",
            "google_compute_managed_ssl_certificate.be_ssl_cert",
            "google_compute_region_network_endpoint_group.be_backend",
            "google_compute_target_https_proxy.be_https_proxy",
            "google_compute_url_map.be_url_map",
            "google_project_service.compute_api",
            "google_project_service.run_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "fe_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/structhub-412620/global/forwardingRules/xtract-fe-stage-https",
            "ip_address": "34.49.79.210",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "xtract-fe-stage-https",
            "port_range": "443-443",
            "project": "structhub-412620",
            "self_link": "https://www.googleapis.com/compute/v1/projects/structhub-412620/global/forwardingRules/xtract-fe-stage-https",
            "target": "https://www.googleapis.com/compute/v1/projects/structhub-412620/global/targetHttpsProxies/external-xtract-fe-stage-https"
          },
          "dependencies": [
            "google_cloud_run_v2_service.fe_cloud_run",
            "google_compute_backend_service.fe_backend",
            "google_compute_global_address.external_ip_fe",
            "google_compute_managed_ssl_certificate.fe_ssl_cert",
            "google_compute_region_network_endpoint_group.fe_backend",
            "google_compute_target_https_proxy.fe_https_proxy",
            "google_compute_url_map.fe_url_map",
            "google_project_service.compute_api",
            "google_project_service.run_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "be_https_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-02T15:55:24.528-08:00",
            "http_keep_alive_timeout_sec": 610,
            "id": "projects/structhub-412620/global/targetHttpsProxies/external-xtract-be-stage-https",
            "name": "external-xtract-be-stage-https",
            "project": "structhub-412620",
            "proxy_bind": false,
            "proxy_id": 4055801907825738371,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/structhub-412620/global/targetHttpsProxies/external-xtract-be-stage-https",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/structhub-412620/global/sslCertificates/xtract-be-stage-structhub-cert"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/structhub-412620/global/urlMaps/external-xtract-be-stage"
          },
          "dependencies": [
            "google_cloud_run_v2_service.be_cloud_run",
            "google_compute_backend_service.be_backend",
            "google_compute_managed_ssl_certificate.be_ssl_cert",
            "google_compute_region_network_endpoint_group.be_backend",
            "google_compute_url_map.be_url_map",
            "google_project_service.compute_api",
            "google_project_service.run_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "fe_https_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-02T15:55:25.093-08:00",
            "http_keep_alive_timeout_sec": 610,
            "id": "projects/structhub-412620/global/targetHttpsProxies/external-xtract-fe-stage-https",
            "name": "external-xtract-fe-stage-https",
            "project": "structhub-412620",
            "proxy_bind": false,
            "proxy_id": 2064466335652250242,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/structhub-412620/global/targetHttpsProxies/external-xtract-fe-stage-https",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/structhub-412620/global/sslCertificates/xtract-fe-stage-structhub-cert"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/structhub-412620/global/urlMaps/external-xtract-fe-stage"
          },
          "dependencies": [
            "google_cloud_run_v2_service.fe_cloud_run",
            "google_compute_backend_service.fe_backend",
            "google_compute_managed_ssl_certificate.fe_ssl_cert",
            "google_compute_region_network_endpoint_group.fe_backend",
            "google_compute_url_map.fe_url_map",
            "google_project_service.compute_api",
            "google_project_service.run_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "be_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-02T15:55:13.113-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/structhub-412620/global/backendServices/xtract-be-stage-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "US2ANmBCnLg=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/structhub-412620/global/urlMaps/external-xtract-be-stage",
            "map_id": 6875042003110724239,
            "name": "external-xtract-be-stage",
            "path_matcher": [],
            "project": "structhub-412620",
            "self_link": "https://www.googleapis.com/compute/v1/projects/structhub-412620/global/urlMaps/external-xtract-be-stage",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_cloud_run_v2_service.be_cloud_run",
            "google_compute_backend_service.be_backend",
            "google_compute_region_network_endpoint_group.be_backend",
            "google_project_service.compute_api",
            "google_project_service.run_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "fe_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-02T15:55:13.662-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/structhub-412620/global/backendServices/xtract-fe-stage-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "ptnaPukY270=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/structhub-412620/global/urlMaps/external-xtract-fe-stage",
            "map_id": 4210756210377228942,
            "name": "external-xtract-fe-stage",
            "path_matcher": [],
            "project": "structhub-412620",
            "self_link": "https://www.googleapis.com/compute/v1/projects/structhub-412620/global/urlMaps/external-xtract-fe-stage",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_cloud_run_v2_service.fe_cloud_run",
            "google_compute_backend_service.fe_backend",
            "google_compute_region_network_endpoint_group.fe_backend",
            "google_project_service.compute_api",
            "google_project_service.run_api"
          ]
        }
      ]
    }
  ]
}